--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license":     "MIT",
     "type":        "symfony-bundle",
     "require": {
-        "symfony/symfony": "2.3.0"
+        "symfony/symfony": "2.3.*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "1.4.*"
