--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,9 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "1.4.*"
-    }
+    },
+    "autoload": {
+        "psr-0": { "Bc\\Bundle\\Symfony2CodingStandardBundle": "" }
+    },
+    "target-dir": "Bc/Bundle/Symfony2CodingStandardBundle"
 }
